Cleaning up workflow

--- a/emma_model.qmd
+++ b/emma_model.qmd
@@ -1,14 +1,5 @@
 ---
-title: "EMMA Prototype"
-description: Modeling vegetation postfire recovery data
-author:
-  - name: Adam Wilson & Glenn Moncrieff
-date: 10-13-2021
-editor_options: 
-  chunk_output_type: console
-output:
-  github_document:
-    html_preview: false
+title: "EMMA Model Overview"
 ---
 
 ```{r, echo=F, eval=F}
