--- a/index.qmd
+++ b/index.qmd
@@ -2,13 +2,13 @@
 title: "EMMA Report"
 ---
 
+Page last updated at `r lubridate::now()`.
 
-```{r, echo=F, message=F,include=F, results="hide", eval=F}
+```{r, echo=F, message=F,include=F, results="hide", eval=T}
 #description: Modeling vegetation postfire recovery data
-#Page last updated at `r lubridate::now()`.
 library(targets)
 library(tarchetypes)
-library(tidyverse)
+library(tidyverse) 
 library(doParallel)
 library(raster)
 library(lubridate)
@@ -28,14 +28,29 @@ We estimate the age of a site by calculating the years since the last fire. We t
 
 # Park Information
 
-```{r prep_parks,echo=FALSE,warning=FALSE,message=FALSE, eval=F}
+```{r prep_parks,echo=FALSE,warning=FALSE,message=FALSE, eval=T}
 
   tar_load(parks) #This apparently is no longer allowed per a new update of targets
+  tar_load(report_qmd_dir) # forces park qmds to run first
+  # tar_load(most_recent_fire_raster)
+  # tar_load(years_since_fire_raster)
+  # tar_load(fires_wgs)
+  # tar_load(most_recent_ndvi_raster)
+  # tar_load(most_recent_ndvi_date)
+  # tar_load(monthly_mean_ndvi_raster)
+  # tar_load(monthly_delta_NDVI)
+  # tar_load(mean_ndvi_raster)
+  # tar_load(delta_ndvi_raster)
+  # tar_load(most_recent_quarter_ndvi_file)
+  # tar_load(quarterly_delta_ndvi_raster)
+  # tar_load(stations_sf)
+  # tar_load(invasives)
+  # tar_load(old_invasives)
+```
 
-  #parks <- read_rds("_targets/objects/parks")
+```{r}
 
 # need to merge each complex into a single geometry
-
 
   cn <- parks$cape_nature%>%
       group_by(COMPLEX)%>%
