--- a/model_summary.qmd
+++ b/model_summary.qmd
@@ -60,7 +60,7 @@ ggplotly(p1)
 
 The plot below illustrates some example recovery trajectories. It currently just shows the top 20 cells with the most observations.
 
-```{r plot, echo=F, eval=TRUE, message=FALSE,fig.height=12}
+```{r plot, echo=F, warning=F, eval=TRUE, message=FALSE,fig.height=12}
 tar_load(model_prediction)
 cells_with_long_records<-
   model_prediction %>% 
@@ -84,7 +84,7 @@ model_prediction %>%
 
 Maps of spatial parameters in the model.
 
-```{r compare_data, echo=F, eval=FALSE, warning=F, message=FALSE}
+```{r compare_data, echo=F, eval=F, warning=F, message=FALSE}
 tar_load(spatial_outputs)
 rast <- projectRaster(spatial_outputs,
                       crs = "+proj=merc +a=6378137 +b=6378137 +lat_ts=0 +lon_0=0 +x_0=0 +y_0=0 +k=1 +units=m +nadgrids=@null +wktext +no_defs +type=crs")
